--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark">
+<nav class="navbar navbar-expand navbar-dark bg-dark mb-3">
   <a class="navbar-brand" routerLink="/">TV maniac</a>
   <div class="container">
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
