--- a/src/app/tv/search/search.component.html
+++ b/src/app/tv/search/search.component.html
@@ -4,12 +4,12 @@
   </section>
   <section class="col">
     <h1 class="h3">Search</h1>
-    <div class="input-group">
-      <input type="search" class="form-control" #queryRef />
+    <form class="input-group">
+      <input type="search" name="query" [(ngModel)]="query" class="form-control" />
       <div class="input-group-append">
-        <button class="btn btn-primary" (click)="search(queryRef.value)">Search</button>
+        <button [disabled]="!query" class="btn btn-primary" (click)="search(query)">Search</button>
       </div>
-    </div>
+    </form>
     <div class="row">
       <tm-poster class="col col-4" [show]="show" *ngFor="let show of shows"></tm-poster>
     </div>
