--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
         </a>
         <a class="nav-item nav-link" routerLinkActive="active" routerLink="/tv">Search</a>
         <a class="nav-item nav-link" routerLinkActive="active" routerLink="/contact">Contact</a>
+        <span> <tm-loading class="navbar-text"></tm-loading></span>
       </div>
     </div>
   </div>
