--- a/src/app/tv/poster/poster.component.html
+++ b/src/app/tv/poster/poster.component.html
@@ -1,2 +1,6 @@
-<img [src]="imgUrl" class="img-fluid" />
-<h2 class="h3">{{ show.name }}</h2>
+<ng-container *ngIf="show">
+  <img [src]="imgUrl" class="img-fluid" alt="" />
+  <h2 class="h3">
+    <a routerLink="/tv/{{ show.id }}"> {{ show.name }}</a>
+  </h2>
+</ng-container>
