--- a/src/app/tv/show-details/show-details.component.html
+++ b/src/app/tv/show-details/show-details.component.html
@@ -10,12 +10,17 @@
           <th>Title</th>
           <th>Air Date</th>
         </tr>
+        <tr>
+          <th><input type="checkbox" [(ngModel)]="isUpperCase" class="form-control" /></th>
+          <th></th>
+          <th><input type="text" [(ngModel)]="dateFormat" class="form-control" /></th>
+        </tr>
       </thead>
       <tbody>
         <tr *ngFor="let episode of showDetails._embedded.episodes">
-          <td>{{ episode | episodize }}</td>
+          <td>{{ episode | episodize: isUpperCase }}</td>
           <td>{{ episode.name }}</td>
-          <td>{{ episode.airdate }}</td>
+          <td>{{ episode.airdate | date: dateFormat || 'dd.MM.yyyy' }}</td>
         </tr>
       </tbody>
     </table>
