--- a/src/app/tv/search/search.component.html
+++ b/src/app/tv/search/search.component.html
@@ -8,12 +8,12 @@
   </section>
   <section class="col">
     <h1 class="h3">Search</h1>
-    <form class="input-group">
+    <form [formGroup]="searchForm" class="input-group">
       <input
+        formControlName="query"
         title="Show name"
         type="search"
         name="query"
-        [(ngModel)]="query"
         class="form-control"
       />
       <div class="input-group-append">
