--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,29 @@
-/* You can add global styles to this file, and also import other style files */
+//$primary: #bada55;
 @import '~bootstrap/scss/bootstrap';
+
+.bookmarked {
+  display: block;
+  position: relative;
+  overflow: hidden;
+}
+
+.bookmarked.transparent::before {
+  opacity: 0.4;
+}
+
+.bookmarked::before {
+  content: 'bookmarked';
+  display: block;
+  position: absolute;
+  top: 31px;
+  right: -25px;
+  transform: rotate(45deg);
+  background: #3273dc;
+  color: #eee;
+  text-transform: uppercase;
+  font-size: 10px;
+  font-weight: bold;
+  width: 120px;
+  text-align: center;
+  box-shadow: -1px 1px 3px rgba(#000, 0.7);
+}
